added a results html and made changes to html and js files to make that new html page for related resources show up

--- a/src/code-nasa-app.html
+++ b/src/code-nasa-app.html
@@ -176,6 +176,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         <a href="/#/" name="projects">Projects</a>
         <a href="/#/guide" name="guide">Guide</a>
         <a href="/#/share" name="share">Share</a>
+        <a href="/#/related" name="related">Related</a>
       </iron-selector>
     </app-header>
 
@@ -187,6 +188,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       <code-nasa-projects name="projects" query-params="{{queryParams}}"></code-nasa-projects>
       <code-nasa-guide name="guide"></code-nasa-guide>
       <code-nasa-share name="share"></code-nasa-share>
+      <code-nasa-related name="related"></code-nasa-related>
       <code-nasa-invalid name="invalid"></code-nasa-invalid>
     </iron-pages>
 
@@ -196,6 +198,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         <a href="/#/" name="projects">Projects</a>
         <a href="/#/guide" name="guide">Guide</a>
         <a href="/#/share" name="share">Share</a>
+        <a href="/#/related" name="related">Related</a>
       </iron-selector>
     </app-drawer>
   </template>
