--- a/src/code-nasa-guide.html
+++ b/src/code-nasa-guide.html
@@ -163,7 +163,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         <h2>1</h2>
         <div class="description">
           <p>
-            Submit a request to release your project as Open Source to your center SRA (Software Release Authority) at <a href="https://softwarerelease.ndc.nasa.gov/">https://softwarerelease.ndc.nasa.gov/</a>.
+            Submit a request to release your project as Open Source to your center SRA (Software Release Authority) at <a href="https://softwarerelease.ndc.nasa.gov/">https://softwarerelease.ndc.nasa.gov/</a>. Check out a more detailed description of the SRA process at the bottom of this page.
           </p>
         </div>
       </div>
@@ -173,7 +173,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         <h2>2</h2>
         <div class="description">
           <p>
-            Receive approval from your center SRA to release as Open Source.
+            After going through the SRA process, receive approval from your center SRA to release as Open Source.
           </p>
         </div>
       </div>
@@ -194,7 +194,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         <div class="description">
           <p>
             <!-- TODO(keanulee): Broken link from old infographic -->
-            Submit a NAMS request by filling out the <a href="http://nams.nasa.gov/nams/asset/227756" target="_blank">HQ AGCY NASA GitHub Collaborator Form</a>.
+            Submit a NAMS request by filling out the <a href="http://nams.nasa.gov/nams/asset/227756" target="_blank">HQ AGCY NASA GitHub Collaborator Form</a>. This will request you be added as a member or collaborator to <a href="https://github.com/orgs/nasa/people">https://github.com/nasa</a>.
           </p>
         </div>
       </div>
@@ -204,7 +204,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         <h2>5</h2>
         <div class="description">
           <p>
-            Meet with us. We can help you join NASA Org, build your team, or answer any questions.
+            Reach out to us after submitting NAMs request. We can help you join NASA Org or answer any questions.
           </p>
         </div>
       </div>
@@ -234,7 +234,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         <h2>8</h2>
         <div class="description">
           <p>
-            View your project on <a href="https://code.nasa.gov/">code.nasa.gov</a> and socialize! Email <a href="mailto:opensource@lists.nasa.gov">opensource@lists.nasa.gov</a> or view <a href="https://help.github.com/articles/be-social" target="_blank">help.github.com/articles/be-social</a>.
+            After your pull request is approved, you can view your project on <a href="https://code.nasa.gov/">code.nasa.gov</a> and socialize! Email <a href="mailto:opensource@lists.nasa.gov">opensource@lists.nasa.gov</a> or view <a href="https://help.github.com/articles/be-social" target="_blank">help.github.com/articles/be-social</a>.
           </p>
         </div>
       </div>
@@ -281,8 +281,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
       <div class="step">
         <div class="step-image step-11"></div>
-        <h2>Details</h2>
-        <div class="description">
+        <h2>SRA Details</h2>
+        <div id="SRA" class="description">
+          <p>
+            To release code, it must go through a process run by the Software Release Authority or SRA.
+          </p>
           <p>
             One initiates the software review process by reporting the software as described in NPR 2210.1C (e.g., submitting a description of the software to be released, the individuals involved in its creation, development timeline, available documentation, and related topics). Depending on center procedures, this information may be captured through the <a href="https://ntr.ndc.nasa.gov/" target="_blank">NASA Technology Reporting System</a> or standard form NF1679. Contact your SRA for the specific procedure used at your center.
           </p>
