--- a/src/code-nasa-share.html
+++ b/src/code-nasa-share.html
@@ -81,8 +81,7 @@
         <h2>NASA developers:</h2>
         <p>
           Thanks for your interest in sharing your code! If you are a developer employed by NASA or a
-          NASA contractor and have open source code you wish to host on the NASA GitHub repository,
-          email us at <a href="mailto:opensource@lists.nasa.gov" target="_blank">opensource@lists.nasa.gov</a>.
+          NASA contractor and have open source code you wish to host on the NASA GitHub repository, check out the <a href="https://code.nasa.gov/#/guide"> guide page</a> or email us at <a href="mailto:opensource@lists.nasa.gov" target="_blank">opensource@lists.nasa.gov</a>.
         </p>
       </div>
 
