admened paragaph on projects page about nlp tags and added related html page

--- a/src/code-nasa-projects.html
+++ b/src/code-nasa-projects.html
@@ -156,7 +156,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       </p>
       <p class="meta explain">
         <!-- <template is="dom-if" if="[[_hasQueryParams(queryParams.*)]]"> -->
-          A.I. generated tags are predicted using a natural language processing model applied to project descriptons. Tags come from list of 8000 NASA concepts tracked in published reports and papers. Accuracy is not guaranteed. Click on a tag to see all projects with that tag.
+          A.I. generated tags are predicted using a natural language processing model applied to project descriptons. Tags come from  <a href="https://www.sti.nasa.gov/nasa-thesaurus/#.XKttRUN7lZI">8000 NASA concepts</a> tracked in 3.5 million published reports and papers by <a href="https://www.sti.nasa.gov/">NASA's Scientific and Technical Information Program</a>. Accuracy is not guaranteed. Click on a tag to see all projects with that tag.
        <!--  </template> -->
       </p>
 
