--- a/src/code-nasa-related.html
+++ b/src/code-nasa-related.html
@@ -104,6 +104,18 @@
           NASA has several programs for putting out data analysis and technology development contests and challenges to public. Centennial Challenge Program, NASA Tournament Lab, Challenge.gov, and NASA’s Center of Excellence for Collaborative Innovation are linked to from <a href="https://www.nasa.gov/offices/oct/openinnovation/aboutus/">this</a> page.
         </p>
       </div>
+      <div class="section first">
+        <h2><a href="https://developers.code.gov/basics.html">Code.gov API</a></h2>
+        <p>
+          If you would like to interact with the data on this page through an API, we suggest you check out the code.gov <a href="https://developers.code.gov/basics.html">API</a>. You can programmatically interact with all NASA open-source projects & open-source code from every federal agency.
+        </p>
+      </div>
+      <div class="section">
+        <h2><a href="https://observablehq.com/@justingosses/nasas-open-source-code-projects">All data is in a single JSON</a></h2>
+        <p>
+          The projects page of code.nasa.gov is built from data in <a href="https://raw.githubusercontent.com/nasa/code-nasa-gov/master/data/catalog.json">catalog.json</a>, available on github. NASA projects on code.gov are harvested from <a href="https://raw.githubusercontent.com/nasa/Open-Source-Catalog/master/code.json">code.JSON</a>, also on github. You can interact with both <a href="https://observablehq.com/@justingosses/nasas-open-source-code-projects">here</a> inside a live Observable code notebook editable in JavaScript.
+        </p>
+      </div>
     </div>
   </template>
 
