Added meta keywords in index.html

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
     <title>NASA Open Source Software</title>
     <meta name="description" content="Find Open Source Software Projects from NASA.">
+    <meta name="Keywords" content="NASA,Nasa Open Source Software,Open Source"/>
 
     <link rel="icon" href="/images/favicon.ico">
 
