--- a/src/code-nasa-projects.html
+++ b/src/code-nasa-projects.html
@@ -160,7 +160,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
        <!--  </template> -->
       </p>
 
-      <iron-list items="[[matchedProjects]]" scroll-target="document">
+      <iron-list items="[[matchedProjects]]">
         <template>
           <div>
             <div class="project">
