Updated keywords for the website
Added some extra keywords for better search appearance.

--- a/index.html
+++ b/index.html
@@ -13,10 +13,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=yes">
-
     <title>NASA Open Source Software</title>
     <meta name="description" content="Find Open Source Software Projects from NASA.">
-    <meta name="Keywords" content="NASA,Nasa Open Source Software,Open Source"/>
+    <meta name="keywords" content="NASA, Open Source, Open Source Projects, NASA Open Source, NASA Projects, Projects from NASA, NASA Software, Software">
 
     <link rel="icon" href="/images/favicon.ico">
 
