Adding the all the schema.org to files

--- a/src/code-nasa-guide.html
+++ b/src/code-nasa-guide.html
@@ -153,103 +153,103 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       }
     </style>
 
-    <div class="container">
+    <div class="container" itemscope itemtype="https://code.nasa.gov/#/guide">
       <div class="splash">
-        <h1>How to Publish</h1>
+        <h1 itemprop="title">How to Publish</h1>
       </div>
 
-      <div class="step">
+      <div class="step" itemprop="step 1">
         <div class="step-image step-1"></div>
         <h2>1</h2>
-        <div class="description">
+        <div class="description" itemprop="description">
           <p>
             Submit a request to release your project as Open Source to your center SRA (Software Release Authority) at <a href="https://softwarerelease.ndc.nasa.gov/">https://softwarerelease.ndc.nasa.gov/</a>. Check out a more detailed description of the SRA process at the bottom of this page.
           </p>
         </div>
       </div>
 
-      <div class="step">
+      <div class="step" itemprop="step 2">
         <div class="step-image step-2"></div>
         <h2>2</h2>
-        <div class="description">
+        <div class="description" itemprop="description">
           <p>
             After going through the SRA process, receive approval from your center SRA to release as Open Source.
           </p>
         </div>
       </div>
 
-      <div class="step">
+      <div class="step" itemprop="step 3">
         <div class="step-image step-3"></div>
         <h2>3</h2>
-        <div class="description">
-          <p>
+        <div class="description" itemprop="description">
+          <p itemprop="url">
             Register on <a href="https://github.com/join" target="_blank">github.com/join</a> using your NASA email address.
           </p>
         </div>
       </div>
 
-      <div class="step">
+      <div class="step" itemprop="step 4">
         <div class="step-image step-4"></div>
         <h2>4</h2>
-        <div class="description">
-          <p>
+        <div class="description" itemprop="description">
+          <p itemprop="url">
             <!-- TODO(keanulee): Broken link from old infographic -->
             Submit a NAMS request by filling out the <a href="http://nams.nasa.gov/nams/asset/227756" target="_blank">HQ AGCY NASA GitHub Collaborator Form</a>. This will request you be added as a member or collaborator to <a href="https://github.com/orgs/nasa/people">https://github.com/nasa</a>.
           </p>
         </div>
       </div>
 
-      <div class="step">
+      <div class="step" itemprop="step 5">
         <div class="step-image step-5"></div>
         <h2>5</h2>
-        <div class="description">
-          <p>
+        <div class="description" itemprop="description">
+          <p itemprop="url">
             Reach out to us after submitting NAMs request. We can help you join NASA Org or answer any questions.
           </p>
         </div>
       </div>
 
-      <div class="step">
+      <div class="step" itemprop="step 6">
         <div class="step-image step-6"></div>
         <h2>6</h2>
-        <div class="description">
-          <p>
+        <div class="description" itemprop="description">
+          <p itemprop="information">
             Transfer or import your source code into the NASA Org on GitHub.
           </p>
         </div>
       </div>
 
-      <div class="step">
+      <div class="step" itemprop="step 7">
         <div class="step-image step-7"></div>
         <h2>7</h2>
-        <div class="description">
+        <div class="description" itemprop="description">
           <p>
-            Update the NASA Open Source Catalog via a pull request to register your project's meta-data at <a href="https://github.com/nasa/open-source-catalog" target="_blank">github.com/nasa/open-source-catalog</a>.
+            Update the NASA Open Source Catalog via a pull request to register your project's meta-data at <a href="https://github.com/nasa/open-source-catalog" itemprop="url" target="_blank">github.com/nasa/open-source-catalog</a>.
           </p>
         </div>
       </div>
 
-      <div class="step">
+      <div class="step" itemprop="step 8">
         <div class="step-image step-8"></div>
         <h2>8</h2>
-        <div class="description">
+        <div class="description" itemprop="description">
           <p>
-            After your pull request is approved, you can view your project on <a href="https://code.nasa.gov/">code.nasa.gov</a> and socialize! Email <a href="mailto:opensource@lists.nasa.gov">opensource@lists.nasa.gov</a> or view <a href="https://help.github.com/articles/be-social" target="_blank">help.github.com/articles/be-social</a>.
+            After your pull request is approved, you can view your project on <a href="https://code.nasa.gov/" itemprop="url">code.nasa.gov</a> and socialize! Email <a href="mailto:opensource@lists.nasa.gov" itemprop="email">opensource@lists.nasa.gov</a> or view <a href="https://help.github.com/articles/be-social" target="_blank">help.github.com/articles/be-social</a>.
           </p>
         </div>
       </div>
 
-      <div class="step">
+      <div class="step" itemprop="step 9">
         <div class="step-image step-9"></div>
         <h2>Overview</h2>
-        <div class="description">
+        <div class="description" itemprop="description">
           <p>
-            Software release at NASA is governed by <a href="http://nodis3.gsfc.nasa.gov/displayDir.cfm?t=NPR&amp;c=2210&amp;s=1C" target="_blank">NPR 2210.1C</a>. NPR 2210.1C establishes the roles, responsibilities, and procedures for reporting, reviewing, and releasing software under various conditions, including open source. Every center has a Software Release Authority (SRA). The SRA processes requests for software release and coordinates legal, export control, IT security, 508 compliance, and software engineering standards compliance reviews. Projects hoping to release software should contact their SRA early to discuss their goals and begin the reporting, review, and release process.
+            Software release at NASA is governed by <a itemprop="url" href="http://nodis3.gsfc.nasa.gov/displayDir.cfm?t=NPR&amp;c=2210&amp;s=1C" target="_blank">NPR 2210.1C</a>. NPR 2210.1C establishes the roles, responsibilities, and procedures for reporting, reviewing, and releasing software under various conditions, including open source. Every center has a Software Release Authority (SRA). The SRA processes requests for software release and coordinates legal, export control, IT security, 508 compliance, and software engineering standards compliance reviews. Projects hoping to release software should contact their SRA early to discuss their goals and begin the reporting, review, and release process.
           </p>
         </div>
       </div>
 
-      <div class="step">
+      <div class="step" itemprop="step 10">
         <div class="step-image step-10"></div>
         <h2>SRAs</h2>
         <div class="description table-container">
@@ -267,7 +267,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
               <tr>
                 <td>[[item.Center]]</td>
                 <td>
-                  <a href$="[[_getMailtoHref(item.Email)]]" target="_blank">[[item.Email]]</a>
+                  <a itemprop="email" href$="[[_getMailtoHref(item.Email)]]" target="_blank">[[item.Email]]</a>
                 </td>
                 <td>[[item.Name]]</td>
                 <td>[[item.Title]]</td>
@@ -279,10 +279,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         </div>
       </div>
 
-      <div class="step">
+      <div class="step" itemprop="step 11">
         <div class="step-image step-11"></div>
         <h2>SRA Details</h2>
-        <div id="SRA" class="description">
+        <div id="SRA" class="description" itemprop="description">
           <p>
             To release code, it must go through a process run by the Software Release Authority or SRA.
           </p>
