--- a/src/code-nasa-share.html
+++ b/src/code-nasa-share.html
@@ -69,15 +69,15 @@
       }
     </style>
 
-    <div class="container">
+    <div class="container" itemscope itemtype="https://code.nasa.gov/#/related">
       <div class="splash">
-        <h1>
+        <h1 itemprop="Share Code">
           Share
           <span class="desktop-only">your Code</span>
         </h1>
       </div>
 
-      <div class="section first">
+      <div class="section first" itemprop="NASA Developers">
         <h2>NASA developers:</h2>
         <p>
           Thanks for your interest in sharing your code! If you are a developer employed by NASA or a
@@ -85,7 +85,7 @@
         </p>
       </div>
 
-      <div class="section">
+      <div class="section" itemprop="Affiliates">
         <h2>Non-NASA affiliates:</h2>
         <p>
           We encourage
