--- a/src/code-nasa-related.html
+++ b/src/code-nasa-related.html
@@ -71,49 +71,50 @@
       }
     </style>
 
-    <div class="container">
+    <div class="container" itemscope itemtype="https://code.nasa.gov/#/related">
       <div class="splash">
         <h1>
           Related
-          <span class="desktop-only">Resources</span>
+          <span class="desktop-only" itemprop="resources">Resources</span>
         </h1>
       </div>
 
-      <div class="section first">
-        <h2><a href="https://open.nasa.gov/">Open.NASA.GOV</a></h2>
+      <div class="section first" itemprop="Open Innovation">
+        <h2><a itemprop="url" href="https://open.nasa.gov/">Open.NASA.GOV</a></h2>
         <p>
-          Open.nasa.gov is a central place for websites run by NASA's Open Innovation program. From here you can go to open <a href="https://data.nasa.gov/browse"> data</a>, open <a href="https://api.nasa.gov">APIs</a>, information on open-data centric outreach programs like datanauts and <a href="https://2019.spaceappschallenge.org">SpaceApps hackathon</a>, as well as <a href="https://open.nasa.gov/open-gov/">information</a> on how we meet open-government related mandates. 
+          Open.nasa.gov is a central place for websites run by NASA's Open Innovation program. From here you can go to open <a itemprop="url" href="https://data.nasa.gov/browse"> data</a>, open <a itemprop="url" href="https://api.nasa.gov">APIs</a>, information on open-data centric outreach programs like datanauts and <a itemprop="url" href="https://2019.spaceappschallenge.org">SpaceApps hackathon</a>, as well as <a itemprop="url" href="https://open.nasa.gov/open-gov/">information</a> on how we meet open-government related mandates. 
         </p>
       </div>
 
-      <div class="section">
-        <h2><a href="https://software.nasa.gov/">Software.NASA.Gov</a></h2>
-        <p>
-          Not all releasable code is open-source code. If you work for another government agency, there may be code you can access that is not open-source but is sharable with certain parties. If you don't find what you're looking for here, check out <a href="https://software.nasa.gov/">Software.NASA.Gov</a>, which is run by the Technology Transfer office.
+      <div class="section" itemprop="NASA Software">
+        <h2><a itemprop="url" href="https://software.nasa.gov/">Software.NASA.Gov</a></h2>
+        <p itemprop="description">
+          Not all releasable code is open-source code. If you work for another government agency, there may be code you can access that is not open-source but is sharable with certain parties. If you don't find what you're looking for here, check out <a itemprop="url" href="https://software.nasa.gov/">Software.NASA.Gov</a>, which is run by the Technology Transfer office.
         </p>
       </div>
-      <div class="section first">
-        <h2><a href="https://github.com/nasa/code-nasa-gov">Source code for Code.nasa.gov</a></h2>
-        <p>
-          If you find a mistake on this page, you can submit a change by contributing an issue or pull request to <a href="https://github.com/nasa/code-nasa-gov">the public github repository</a> that holds this page's source code. If you find any mistakes in the `A.I. generated tags` on this website's <a href="https://code.nasa.gov/#/">projects page</a>, we'd like to know about it.
+      <div class="section first" itemprop="Source Code">
+        <h2><a itemprop="url" href="https://github.com/nasa/code-nasa-gov">Source code for Code.nasa.gov</a></h2>
+        <p itemprop="description">
+          If you find a mistake on this page, you can submit a change by contributing an issue or pull request to <a  itemprop="url" href="https://github.com/nasa/code-nasa-gov">the public github repository</a> that holds this page's source code. If you find any mistakes in the `A.I. generated tags` on this website's <a 
+          itemprop="url" href="https://code.nasa.gov/#/">projects page</a>, we'd like to know about it.
         </p>
       </div>
-      <div class="section">
-        <h2><a href="https://www.nasa.gov/offices/oct/openinnovation/aboutus">NASA's Challenges and Prizes</a></h2>
-        <p>
-          NASA has several programs for putting out data analysis and technology development contests and challenges to public. Centennial Challenge Program, NASA Tournament Lab, Challenge.gov, and NASA’s Center of Excellence for Collaborative Innovation are linked to from <a href="https://www.nasa.gov/offices/oct/openinnovation/aboutus/">this</a> page.
+      <div class="section" itemprop="NASA Challenges">
+        <h2><a itemprop="url" href="https://www.nasa.gov/offices/oct/openinnovation/aboutus">NASA's Challenges and Prizes</a></h2>
+        <p itemprop="description">
+          NASA has several programs for putting out data analysis and technology development contests and challenges to public. Centennial Challenge Program, NASA Tournament Lab, Challenge.gov, and NASA’s Center of Excellence for Collaborative Innovation are linked to from <a itemprop="url" href="https://www.nasa.gov/offices/oct/openinnovation/aboutus/">this</a> page.
         </p>
       </div>
-      <div class="section first">
-        <h2><a href="https://developers.code.gov/basics.html">Code.gov API</a></h2>
-        <p>
-          If you would like to interact with the data on this page through an API, we suggest you check out the code.gov <a href="https://developers.code.gov/basics.html">API</a>. You can programmatically interact with all NASA open-source projects & open-source code from every federal agency.
+      <div class="section first" itemprop="API">
+        <h2><a itemprop="url" href="https://developers.code.gov/basics.html">Code.gov API</a></h2>
+        <p itemprop="description">
+          If you would like to interact with the data on this page through an API, we suggest you check out the code.gov <a itemprop="url" href="https://developers.code.gov/basics.html">API</a>. You can programmatically interact with all NASA open-source projects & open-source code from every federal agency.
         </p>
       </div>
-      <div class="section">
-        <h2><a href="https://observablehq.com/@justingosses/nasas-open-source-code-projects">All data is in a single JSON</a></h2>
-        <p>
-          The projects page of code.nasa.gov is built from data in <a href="https://raw.githubusercontent.com/nasa/code-nasa-gov/master/data/catalog.json">catalog.json</a>, available on github. NASA projects on code.gov are harvested from <a href="https://raw.githubusercontent.com/nasa/Open-Source-Catalog/master/code.json">code.JSON</a>, also on github. You can interact with both <a href="https://observablehq.com/@justingosses/nasas-open-source-code-projects">here</a> inside a live Observable code notebook editable in JavaScript.
+      <div class="section" itemprop="Observable">
+        <h2><a itemprop="url" href="https://observablehq.com/@justingosses/nasas-open-source-code-projects">All data is in a single JSON</a></h2>
+        <p itemprop="description">
+          The projects page of code.nasa.gov is built from data in <a itemprop="url" href="https://raw.githubusercontent.com/nasa/code-nasa-gov/master/data/catalog.json">catalog.json</a>, available on github. NASA projects on code.gov are harvested from <a itemprop="url" href="https://raw.githubusercontent.com/nasa/Open-Source-Catalog/master/code.json">code.JSON</a>, also on github. You can interact with both <a itemprop="url" href="https://observablehq.com/@justingosses/nasas-open-source-code-projects">here</a> inside a live Observable code notebook editable in JavaScript.
         </p>
       </div>
     </div>
