Adding schema to index

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       }
     </script>
 
-    <link rel="import" href="/src/code-nasa-app.html">
+    <link itemprop="url" rel="import" href="/src/code-nasa-app.html">
 
     <style>
       @font-face {
@@ -153,12 +153,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <code-nasa-app></code-nasa-app>
 
     <footer>
-      <p>
+      <p itemprop="title">
         NASA Official:
-        <a href="mailto:brian.a.thomas@nasa.gov" target="_blank">Brian Thomas</a>
+        <a itemprop="email" href="mailto:brian.a.thomas@nasa.gov" target="_blank">Brian Thomas</a>
       </p>
       <p class="last">
-        <a href="http://open.nasa.gov/" target="_blank">
+        <a itemprop="url" href="http://open.nasa.gov/" target="_blank">
           A NASA Open Government Initiative Website
         </a>
       </p>
