experiments branch works ish

--- a/src/code-nasa-app.html
+++ b/src/code-nasa-app.html
@@ -180,6 +180,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           <a href="/#/guide" name="guide">Guide</a>
           <a href="/#/share" name="share">Share</a>
           <a href="/#/related" name="related">Related</a>
+          <a href="/#/experiments" name="experiments">Experiments</a>
+          <!-- <a href="/#/tagcluster" name="tagcluster">tagcluster</a> -->
         </iron-selector>
       </div>
     </app-header>
@@ -193,6 +195,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       <code-nasa-guide name="guide"></code-nasa-guide>
       <code-nasa-share name="share"></code-nasa-share>
       <code-nasa-related name="related"></code-nasa-related>
+      <code-nasa-experiments name="experiments"></code-nasa-experiments>
+      <code-nasa-tagcluster name="tagcluster"></code-nasa-tagcluster>
+      
       <code-nasa-invalid name="invalid"></code-nasa-invalid>
     </iron-pages>
 
@@ -203,6 +208,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         <a href="/#/guide" name="guide">Guide</a>
         <a href="/#/share" name="share">Share</a>
         <a href="/#/related" name="related">Related</a>
+        <a href="/#/experiments" name="experiments">Experiments</a>
+        <!-- <a href="/#/tagcluster" name="tagcluster">tagcluster</a> -->
       </iron-selector>
     </app-drawer>
   </template>
@@ -256,5 +263,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         // See Polymer/polymer#4128.
       }
     });
+
+    
   </script>
+  
 </dom-module>
