made experimens branch look nice

--- a/src/code-nasa-app.html
+++ b/src/code-nasa-app.html
@@ -178,7 +178,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         <iron-selector class="tabs" selected="[[page]]" attr-for-selected="name">
           <a href="/#/" name="projects">Projects</a>
           <a href="/#/guide" name="guide">Guide</a>
-          <a href="/#/share" name="share">Share</a>
+          <!-- <a href="/#/share" name="share">Share</a> -->
           <a href="/#/related" name="related">Related</a>
           <a href="/#/experiments" name="experiments">Experiments</a>
           <!-- <a href="/#/tagcluster" name="tagcluster">tagcluster</a> -->
@@ -206,7 +206,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       <iron-selector class="drawer-links" selected="[[page]]" attr-for-selected="name" on-click="_toggleDrawer">
         <a href="/#/" name="projects">Projects</a>
         <a href="/#/guide" name="guide">Guide</a>
-        <a href="/#/share" name="share">Share</a>
+        <!-- <a href="/#/share" name="share">Share</a> -->
         <a href="/#/related" name="related">Related</a>
         <a href="/#/experiments" name="experiments">Experiments</a>
         <!-- <a href="/#/tagcluster" name="tagcluster">tagcluster</a> -->
