--- a/src/code-nasa-experiments.html
+++ b/src/code-nasa-experiments.html
@@ -78,44 +78,24 @@
           <span class="desktop-only">Expermients</span>
         </h1>
       </div>
-
       <div class="section first">
-        <h2><a href="https://open.nasa.gov/">What NASA Software is popular?</a></h2>
+        <h2><a href="#/tagcluster">Experimental UI Based on NLP Tags</a></h2>
+        <div style="margin:0 auto;text-align: center">
+                <a href="#/tagcluster"><img src="images/tag_bubble.png" style="width:200px;"></img></a>
+        </div>
         <p>
-          Open.nasa.gov is a central place for websites run by NASA's Open Innovation program. From here you can go to open <a href="https://data.nasa.gov/browse"> data</a>, open <a href="https://api.nasa.gov">APIs</a>, information on open-data centric outreach programs like datanauts and <a href="https://2019.spaceappschallenge.org">SpaceApps hackathon</a>, as well as <a href="https://open.nasa.gov/open-gov/">information</a> on how we meet open-government related mandates. 
-        </p>
-      </div>
-
-      <div class="section">
-        <h2><a href="#/tagcluster">Experimental User-Interface Based on NLP Tags</a></h2>
-        <p>
-          Not all releasable code is open-source code. If you work for another government agency, there may be code you can access that is not open-source but is sharable with certain parties. If you don't find what you're looking for here, check out <a href="https://software.nasa.gov/">Software.NASA.Gov</a>, which is run by the Technology Transfer office.
-        </p>
-      </div>
-      <div class="section first">
-        <h2><a href="https://github.com/nasa/code-nasa-gov">License Stats</a></h2>
-        <p>
-          If you find a mistake on this page, you can submit a change by contributing an issue or pull request to <a href="https://github.com/nasa/code-nasa-gov">the public github repository</a> that holds this page's source code. If you find any mistakes in the `A.I. generated tags` on this website's <a href="https://code.nasa.gov/#/">projects page</a>, we'd like to know about it.
+            An experiment that explores methods for utilizing data visualization & results of a machine-learning model to provide a better way to explore clustering and aggregate patterns in NASA's open-source code. Includes link to live, editable version.
         </p>
       </div>
       <div class="section">
-        <h2><a href="https://www.nasa.gov/offices/oct/openinnovation/aboutus">Visitor Counts By Website</a></h2>
+        <h2><a href="https://observablehq.com/@justingosses/public-engagement-with-nasas-open-source-code-projects-on-g">Which code is most popular with the public? </a></h2>
+        <div style="margin:0 auto;text-align: center">
+                <a href="https://observablehq.com/@justingosses/public-engagement-with-nasas-open-source-code-projects-on-g"><img src="images/popular_code.png" style="width:200px;"></img></a>
+        </div>
         <p>
-          NASA has several programs for putting out data analysis and technology development contests and challenges to public. Centennial Challenge Program, NASA Tournament Lab, Challenge.gov, and NASA’s Center of Excellence for Collaborative Innovation are linked to from <a href="https://www.nasa.gov/offices/oct/openinnovation/aboutus/">this</a> page.
+          One way to answer this question, is to look at github statistics for forks, stars, clones, etc. This live, editable notebook on Observable explores which code projects on github.com/nasa seem to be the most popular.
         </p>
       </div>
-      <div class="section first">
-        <h2><a href="https://developers.code.gov/basics.html">Code.gov API Demo on Observable</a></h2>
-        <p>
-          If you would like to interact with the data on this page through an API, we suggest you check out the code.gov <a href="https://developers.code.gov/basics.html">API</a>. You can programmatically interact with all NASA open-source projects & open-source code from every federal agency.
-        </p>
-      </div>
-      <!-- <div class="section">
-        <h2><a href="https://observablehq.com/@justingosses/nasas-open-source-code-projects">All data is in a single JSON</a></h2>
-        <p>
-          The projects page of code.nasa.gov is built from data in <a href="https://raw.githubusercontent.com/nasa/code-nasa-gov/master/data/catalog.json">catalog.json</a>, available on github. NASA projects on code.gov are harvested from <a href="https://raw.githubusercontent.com/nasa/Open-Source-Catalog/master/code.json">code.JSON</a>, also on github. You can interact with both <a href="https://observablehq.com/@justingosses/nasas-open-source-code-projects">here</a> inside a live Observable code notebook editable in JavaScript.
-        </p>
-      </div> -->
     </div>
   </template>
 
