--- a/src/code-nasa-experiments.html
+++ b/src/code-nasa-experiments.html
@@ -75,7 +75,7 @@
       <div class="splash">
         <h1>
           
-          <span class="desktop-only">Expermients</span>
+          <span class="desktop-only">Experiments</span>
         </h1>
       </div>
       <div class="section first">
