--- a/src/code-nasa-projects.html
+++ b/src/code-nasa-projects.html
@@ -203,11 +203,14 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
               
             </div>
           </div>
+         
         </template>
       </iron-list>
+      <script async language="javascript" src="https://dap.digitalgov.gov/Universal-Federated-Analytics-Min.js?agency=NASA" id="_fed_an_ua_tag"></script>
+
     </div>
   </template>
-
+  
   <script>
     Polymer({
       is: 'code-nasa-projects',
@@ -408,4 +411,5 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       }
     });
   </script>
+  
 </dom-module>
