--- a/src/code-nasa-related.html
+++ b/src/code-nasa-related.html
@@ -80,30 +80,39 @@
       </div>
 
       <div class="section first" itemprop="Open Innovation">
-        <h2><a itemprop="url" href="https://open.nasa.gov/">Open.NASA.GOV</a></h2>
+        <h2><a itemprop="url" href="https://open.nasa.gov/">Open-data & Open-APIs & Open-Outreach</a></h2>
         <p>
-          Open.nasa.gov is a central place for websites run by NASA's Open Innovation program. From here you can go to open <a itemprop="url" href="https://data.nasa.gov/browse"> data</a>, open <a itemprop="url" href="https://api.nasa.gov">APIs</a>, information on open-data centric outreach programs like datanauts and <a itemprop="url" href="https://2019.spaceappschallenge.org">SpaceApps hackathon</a>, as well as <a itemprop="url" href="https://open.nasa.gov/open-gov/">information</a> on how we meet open-government related mandates. 
+          <a href="https://open.nasa.gov/">Open.nasa.gov</a> is a central place for websites run by NASA's Open Innovation program. From here you can go to open <a itemprop="url" href="https://data.nasa.gov/browse"> data</a>, open <a itemprop="url" href="https://api.nasa.gov">APIs</a>, information on open-data centric outreach programs like datanauts and <a itemprop="url" href="https://2019.spaceappschallenge.org">SpaceApps hackathon</a>, as well as <a itemprop="url" href="https://open.nasa.gov/open-gov/">information</a> on how we meet open-government related mandates. 
         </p>
       </div>
 
       <div class="section" itemprop="NASA Software">
-        <h2><a itemprop="url" href="https://software.nasa.gov/">Software.NASA.Gov</a></h2>
+        <h2><a itemprop="url" href="https://software.nasa.gov/">Open-to-only-government-code</a></h2>
         <p itemprop="description">
           Not all releasable code is open-source code. If you work for another government agency, there may be code you can access that is not open-source but is sharable with certain parties. If you don't find what you're looking for here, check out <a itemprop="url" href="https://software.nasa.gov/">Software.NASA.Gov</a>, which is run by the Technology Transfer office.
         </p>
       </div>
-      <div class="section first" itemprop="Source Code">
-        <h2><a itemprop="url" href="https://github.com/nasa/code-nasa-gov">Source code for Code.nasa.gov</a></h2>
-        <p itemprop="description">
-          If you find a mistake on this page, you can submit a change by contributing an issue or pull request to <a  itemprop="url" href="https://github.com/nasa/code-nasa-gov">the public github repository</a> that holds this page's source code. If you find any mistakes in the `A.I. generated tags` on this website's <a 
-          itemprop="url" href="https://code.nasa.gov/#/">projects page</a>, we'd like to know about it.
-        </p>
+      <div class="section first" itemprop="Dashlink">
+          <h2><a itemprop="url" href="https://c3.nasa.gov/dashlink/">Dashlink: Algorithm & Model Sharing</a></h2>
+          <p itemprop="description">
+              <a href="https://c3.nasa.gov/dashlink/">DASHlink</a> is a collaborative sharing network for researchers in the Data Mining and Systems Health fields. On DASHlink you can create a public member profile, share papers, algorithms, and datasets, and utilize tools like wikis and blogs to collaborate.
+          </p>
       </div>
       <div class="section" itemprop="NASA Challenges">
         <h2><a itemprop="url" href="https://www.nasa.gov/offices/oct/openinnovation/aboutus">NASA's Challenges and Prizes</a></h2>
         <p itemprop="description">
           NASA has several programs for putting out data analysis and technology development contests and challenges to public. Centennial Challenge Program, NASA Tournament Lab, Challenge.gov, and NASA’s Center of Excellence for Collaborative Innovation are linked to from <a itemprop="url" href="https://www.nasa.gov/offices/oct/openinnovation/aboutus/">this</a> page.
         </p>
+      </div>
+      
+      <div class="container" itemscope itemtype="https://code.nasa.gov/#/related" style="padding-bottom: 2em;">
+        <!-- <div class="splash"> -->
+        <div>
+          <h1 style="margin:4em auto; text-align: center;">
+            
+            <span class="desktop-only" itemprop="resources">Code & Data For This Site</span>
+          </h1>
+        </div>
       </div>
       <div class="section first" itemprop="API">
         <h2><a itemprop="url" href="https://developers.code.gov/basics.html">Code.gov API</a></h2>
@@ -112,11 +121,18 @@
         </p>
       </div>
       <div class="section" itemprop="Observable">
-        <h2><a itemprop="url" href="https://observablehq.com/@justingosses/nasas-open-source-code-projects">All data is in a single JSON</a></h2>
+        <h2><a itemprop="url" href="https://observablehq.com/@justingosses/nasas-open-source-code-projects">All code projects in a single JSON</a></h2>
         <p itemprop="description">
           The projects page of code.nasa.gov is built from data in <a itemprop="url" href="https://raw.githubusercontent.com/nasa/code-nasa-gov/master/data/catalog.json">catalog.json</a>, available on github. NASA projects on code.gov are harvested from <a itemprop="url" href="https://raw.githubusercontent.com/nasa/Open-Source-Catalog/master/code.json">code.JSON</a>, also on github. You can interact with both <a itemprop="url" href="https://observablehq.com/@justingosses/nasas-open-source-code-projects">here</a> inside a live Observable code notebook editable in JavaScript.
         </p>
       </div>
+      <div class="section first" itemprop="Source Code">
+          <h2><a itemprop="url" href="https://github.com/nasa/code-nasa-gov">Source code for Code.nasa.gov</a></h2>
+          <p itemprop="description">
+            If you find a mistake on this page, you can submit a change by contributing an issue or pull request to <a  itemprop="url" href="https://github.com/nasa/code-nasa-gov">the public github repository</a> that holds this page's source code. If you find any mistakes in the `A.I. generated tags` on this website's <a 
+            itemprop="url" href="https://code.nasa.gov/#/">projects page</a>, we'd like to know about it.
+          </p>
+        </div>
     </div>
   </template>
 
