readme test need to remove test

--- a/src/code-nasa-guide.html
+++ b/src/code-nasa-guide.html
@@ -185,7 +185,7 @@
                     <div class="step-image step-7"></div>
                     <h2>7</h2>
                     <div class="description" itemprop="description">
-                        <p>Update the NASA Open Source Catalog via a pull request (repo <a href="https://github.com/nasa/open-source-catalog" itemprop="url" target="_blank">here</a>), or by our online <a href="https://developer.nasa.gov/pages/OpenInnovation/code-submission-app/">form</a> (behind NASA firewall) to register your project's meta-data.</p>
+                        <p>Update the NASA Open Source Catalog via a pull request (repo <a href="https://github.com/nasa/open-source-catalog" itemprop="url" target="_blank">here</a>), or by our online <a href="https://developer.nasa.gov/pages/OpenInnovation/code-submission-app/">form</a> (behind NASA firewall) to register your project's meta-data. Be sure to provide good tags for your code project & follow <a href="https://code.gov/assets/data/ai_inventory-guidance.pdf">this government-wide guidance</a> on specific tags to use if your code involves machine-learning or artificial intelligence.</p>
                     </div>
                 </div>
                 <div class="step" itemprop="step 8">
